--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,23 +17,12 @@ html {
   ));
 }
 
-body {
-  // Default the application to a light color theme. This can be changed to
-  // `dark` to enable the dark color theme, or to `light dark` to defer to the
-  // user's system settings.
-  color-scheme: light;
-
-  // Set a default background, font and text colors for the application using
-  // Angular Material's system-level CSS variables. Learn more about these
-  // variables at https://material.angular.dev/guide/system-variables
-  background-color: var(--mat-sys-surface);
-  color: var(--mat-sys-on-surface);
-  font: var(--mat-sys-body-medium);
-
-  // Reset the user agent margin.
-  margin: 0;
-}
 @import url('https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Caudex:wght@400;700&display=swap');
+
+body.rsvp-page > app-root > app-header,
+body.rsvp-page > app-root > .header-divider {
+  display: none;
+}
 
 /* Reset and base styles */
 * {
@@ -42,16 +31,10 @@ body {
   box-sizing: border-box;
 }
 
-html {
+html, body {
+  margin: 0;
+  padding: 0;
   height: 100%;
-  width: 100%;
-}
-
-body {
-  min-height: 100%;
-  width: 100%;
-  font-family: 'Caudex', serif;
-  background: #DCD9B9;
   overflow-x: hidden;
 }
 
@@ -59,32 +42,8 @@ body {
   font-size: 16px;
   line-height: 1.6;
   color: #48482A;
-}
-
-.scroll-sentinel {
-  position: absolute;
-  top: 0;
-  height: 1px;
-  width: 1px;
-  pointer-events: none;
-}
-
-/* Utility classes */
-.sr-only {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  margin: -1px;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  white-space: nowrap;
-  border: 0;
-}
-
-/* Smooth scrolling */
-html {
-  scroll-behavior: smooth;
+  font-family: 'Caudex', serif;
+  background: #DCD9B9;
 }
 
 /* Image optimization */
@@ -107,8 +66,6 @@ button {
   cursor: pointer;
   font-family: inherit;
 }
-
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 :root {
   @include mat.menu-overrides((
