Fixing our-story wording

--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -26,7 +26,7 @@
     </div>
     <div class="our-story-body-item">
       <p class="our-story-body-text">
-        Jason and Maddie met on their very first day of classes at Miami University on August 27, 2017, when they began their undergraduate studies &mdash; Jason majoring in Psychology and Biology, and Maddie in Psychology and Philosophy. What started as a friendship formed on day one quickly became something more. They became inseparable almost immediately, and as Jason&rsquo;s sister Haleigh later put it, <em>&ldquo;We knew there was something special when Jason came home for their first fall break and couldn&rsquo;t think of a single story that Maddie wasn&rsquo;t a part of.&rdquo;</em>
+        Jason and Maddie met on their very first day of classes at Miami University on August 27, 2017, when they began their undergraduate studies &mdash; Jason majoring in Psychology and Biology, and Maddie in Psychology and Philosophy. What started as a friendship, formed on day one, quickly became something more. They became inseparable almost immediately, and as Jason&rsquo;s sister Haleigh later put it, <em>&ldquo;We knew there was something special when Jason came home for their first fall break and couldn&rsquo;t think of a single story that Maddie wasn&rsquo;t a part of.&rdquo;</em>
       </p>
 
       <p class="our-story-body-text">
@@ -38,7 +38,7 @@
       </p>
 
       <p class="our-story-body-text">
-        In May 2025, Jason and Maddie bought their first home together in Victorian Village, where they still love their long walks with Roo around the neighborhood, walking to Ohio State football games, Blue Jackets hockey games, and Crew soccer matches. Just one month later, in June 2025, Jason proposed in the backyard of that very home, turning the place where they were building their future into the place where the next chapter officially began.
+        In May 2025, Jason and Maddie bought their first home together in Victorian Village, where they love their long walks with Roo around the neighborhood, walking to Ohio State football games, Blue Jackets hockey games, and Crew soccer matches. Just one month later, in June 2025, Jason proposed in the backyard of that very home, turning the place where they were building their future into the place where the next chapter officially began.
       </p>
 
       <p class="our-story-body-text">
